<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvTextInput"
        android:layout_width="match_parent"
        android:layout_height="250sp"
        android:background="#EFEFEF"
        android:gravity="bottom|end"
        android:padding="10sp"
        android:text="@string/textview"
        android:textSize="24sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn7"
            android:layout_width="0sp"
            android:layout_height="match_parent"
            android:layout_margin="2sp"
            android:layout_weight="1"
            android:backgroundTint="@color/grey"
            android:onClick="onDigitClick"
            android:text="@string/_7"
            tools:ignore="NestedWeights" />

        <Button
            android:id="@+id/btn8"
            android:layout_width="0sp"
            android:layout_height="match_parent"
            android:layout_margin="2sp"
            android:layout_weight="1"
            android:backgroundTint="@color/grey"
            android:onClick="onDigitClick"
            android:text="@string/_8" />

        <Button
            android:id="@+id/btn9"
            android:layout_width="0sp"
            android:layout_height="match_parent"
            android:layout_margin="2sp"
            android:layout_weight="1"
            android:backgroundTint="@color/grey"
            android:onClick="onDigitClick"
            android:text="@string/_9" />

        <Button
            android:id="@+id/btnDivide"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2sp"
            android:layout_weight="1"
            android:backgroundTint="@color/grey"
            android:onClick="onOperatorButtonClick"
            android:text="@string/_divide" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn4"
            android:layout_width="0sp"
            android:layout_height="match_parent"
            android:layout_margin="2sp"
            android:layout_weight="1"
            android:backgroundTint="@color/grey"
            android:onClick="onDigitClick"
            android:text="@string/_4"
            tools:ignore="NestedWeights" />

        <Button
            android:id="@+id/btn5"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2sp"
            android:layout_weight="1"
            android:backgroundTint="@color/grey"
            android:onClick="onDigitClick"
            android:text="@string/_5" />

        <Button
            android:id="@+id/btn6"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2sp"
            android:layout_weight="1"
            android:backgroundTint="@color/grey"
            android:onClick="onDigitClick"
            android:text="@string/_6" />

        <Button
            android:id="@+id/btnMultiply"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2sp"
            android:layout_weight="1"
            android:backgroundTint="@color/grey"
            android:onClick="onOperatorButtonClick"
            android:text="@string/_multiply" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2sp"
            android:layout_weight="1"
            android:backgroundTint="@color/grey"
            android:onClick="onDigitClick"
            android:text="@string/_1"
            tools:ignore="NestedWeights" />

        <Button
            android:id="@+id/btn2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2sp"
            android:layout_weight="1"
            android:backgroundTint="@color/grey"
            android:onClick="onDigitClick"
            android:text="@string/_2" />

        <Button
            android:id="@+id/btn3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2sp"
            android:layout_weight="1"
            android:backgroundTint="@color/grey"
            android:onClick="onDigitClick"
            android:text="@string/_3" />

        <Button
            android:id="@+id/btnSubtract"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2sp"
            android:layout_weight="1"
            android:backgroundTint="@color/grey"
            android:onClick="onOperatorButtonClick"
            android:text="@string/_minus" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn0"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2sp"
            android:layout_weight="2"
            android:backgroundTint="@color/grey"
            android:onClick="onDigitClick"
            android:text="0" />

        <Button
            android:id="@+id/btnClear"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2sp"
            android:layout_weight="1"
            android:backgroundTint="@color/grey"
            android:onClick="onClearButtonClick"
            android:text="Clear" />

        <Button
            android:id="@+id/btnPlus"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2sp"
            android:layout_weight="1"
            android:backgroundTint="@color/grey"
            android:onClick="onOperatorButtonClick"
            android:text="+" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnEquals"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2sp"
            android:layout_weight="3"
            android:backgroundTint="@color/grey"
            android:onClick="onEqualButtonClick"
            android:text="=" />

        <Button
            android:id="@+id/btnPoint"
            android:layout_width="0sp"
            android:layout_height="match_parent"
            android:layout_margin="2sp"
            android:layout_weight="1"
            android:backgroundTint="@color/grey"
            android:onClick="onDotButtonClick"
            android:text="." />
    </LinearLayout>

</LinearLayout>